tests/error/comprehension_errors/multi_use1.err
Error: Copy violation (at $FILE:13:12)
   | 
11 | @guppy(module)
12 | def foo(qs: list[qubit] @owned, xs: list[int]) -> list[qubit]:
13 |     return [q for q in qs for x in xs]
   |             ^ Variable `q` with non-copyable type `qubit` would be moved
   |               multiple times when evaluating this
   |               comprehension

Guppy compilation failed due to 1 previous error
